--- a/TrialStuffForReal/en.lproj/MainStoryboard.storyboard
+++ b/TrialStuffForReal/en.lproj/MainStoryboard.storyboard
@@ -35,6 +35,9 @@
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="pepperTheEggs:" destination="2" eventType="touchUpInside" id="dfE-ea-7jP"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="KPN-ys-HxU">
                                 <rect key="frame" x="194" y="242" width="106" height="37"/>
@@ -47,6 +50,9 @@
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="ketchupTheEggs:" destination="2" eventType="touchUpInside" id="V8K-qQ-uGO"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="OKl-Yj-IfK">
                                 <rect key="frame" x="20" y="287" width="280" height="37"/>
@@ -59,6 +65,9 @@
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="eatTheEggs:" destination="2" eventType="touchUpInside" id="gnM-QQ-iv7"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="gXB-ob-U4L">
                                 <rect key="frame" x="20" y="332" width="280" height="37"/>
@@ -71,6 +80,9 @@
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="goToJail:" destination="2" eventType="touchUpInside" id="Kl9-Oe-fq4"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -137,6 +149,12 @@
     <classes>
         <class className="FirstViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/FirstViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="eatTheEggs:"/>
+                <relationship kind="action" name="goToJail:"/>
+                <relationship kind="action" name="ketchupTheEggs:"/>
+                <relationship kind="action" name="pepperTheEggs:"/>
+            </relationships>
         </class>
         <class className="SecondViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/SecondViewController.h"/>
